# DynaDbg

./: CREDITS.md  README.md
.github/: FUNDING.yml
.github/workflows/: build-benchmark.yml  build.yml
benchmark/shooting_game/: Makefile  README.md  shooting_game.cpp
frameworks/wasm/: server.js
scripts/: check-licenses.sh
src/client/: .licensecheckrc  index.html  package-lock.json  package.json  (+1 more)
src/client/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src/client/src-tauri/capabilities/: default.json  watchpoint.json
src/client/src-tauri/icons/: icon.icns
src/client/src-tauri/src/: lib.rs  main.rs  state.rs
src/server/: .gitignore  Cargo.toml  build.bat  build.rs  build.sh  deny.toml
src/server/src/: api.rs  lib.rs  logger.rs  macho_bridge.rs  main.rs  native_bridge.rs  ptrscan.rs  request.rs  serve.rs  util.rs  wasm_bridge.rs
src/server/src/cpp/src/common/: arm64_decoder.cpp  arm64_decoder.h  dll_export.h  exception_info.h  trace_file.cpp  trace_file.h  util.cpp  util.h
src/server/src/cpp/src/darwin/: Makefile
src/server/src/cpp/src/darwin/core/: callback_stubs.mm  file_api.h  file_api.mm  memory_io.h  memory_io.mm  native_api.h  native_api.mm  process_api.h  process_api.mm
src/server/src/cpp/src/darwin/debugger/: arch_defs.h  debugger.h  debugger_breakpoint.mm  debugger_core.mm  debugger_exception.mm  debugger_internal.h  debugger_native_api.mm  debugger_register.mm  debugger_trace.mm  debugger_types.h  debugger_watchpoint.mm
src/server/src/cpp/src/linux/: Makefile  debugger.h
src/server/src/cpp/src/linux/core/: callback_stubs.cpp  file_api.cpp  file_api.h  memory_io.cpp  memory_io.h  native_api.cpp  native_api.h  process_api.cpp  process_api.h
src/server/src/cpp/src/linux/debugger/: arch_defs.h  debugger.h  debugger_breakpoint.cpp  debugger_core.cpp  debugger_exception.cpp  debugger_internal.h  debugger_memory.cpp  debugger_native_api.cpp  debugger_register.cpp  debugger_spawn.cpp  debugger_thread.cpp  debugger_types.h  debugger_watchpoint.cpp
src/server/src/cpp/src/linux/elf/: elf_parser.cpp  elf_parser.h
src/server/src/cpp/src/linux/pty/: pty_manager.cpp  pty_manager.h
src/server/src/cpp/src/windows/core/: callback_stubs.cpp  file_api.cpp  file_api.h  memory_io.cpp  memory_io.h  native_api.cpp  native_api.h
src/server/src/cpp/src/windows/debugger/: debugger.cpp  debugger.h
src/server/src/swift/: Package.resolved  Package.swift
src/server/src/swift/Sources/: MachOBridge.swift
(+92 files in other folders)
