[package]
name = "dyna-dbg"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
serde_json = "=1.0.140"

[dependencies]
rayon = "1.5.0"
warp = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "=1.0.140"
hyper = "0.14"
regex = "1.8.4"
hex = "0.4.3"
byteorder = "1.4.3"
memchr = "2.7.2"
ctor = "0.2.6"
lz4_flex = "0.11.3"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
capstone = "0.12"
libloading = "0.8"
paste = "1.0"
flate2 = "1.0"
rand = "0.8"
base64 = "0.22"

[features]
default = []
ENABLE_LOG_DEVELOP = []

[[bin]]
name = "dbgsrv"
path = "src/main.rs"

# dbg_inspector is only built for macOS, not iOS
# Use: cargo build --lib --target aarch64-apple-darwin
# [lib]
# name = "dbg_inspector"
# crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(host_os, values("windows"))'] }