[package]
name = "DynaDbg"
version = "0.1.0"
description = "A Tauri App"
authors = ["ichise@doranekosystems.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dyna_dbg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
capstone = "0.12"
cpp_demangle = "0.4"
rustc-demangle = "0.1"
dirs = "5.0"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"
libc = "0.2"
rfd = "0.15"
base64 = "0.22"
hex = "0.4"
lz4_flex = "0.11"
rayon = "1.10"
walrus = "0.23"
wasmparser = "0.220"


